Fix for the bug #1200: Can't start MySQL if bind-address set to hostname that starts with a number.